# Dailynest

./: .env  .env.example  .gitignore  IAusage.md  Makefile  agente.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  agenda_models.py  file_models.py  models.py  notepad_models.py  task_models.py  user_models.py
backend/app/routers/: agenda_router.py  api_router.py  auth.py  auth_router.py  file_router.py  notepad_router.py  task_router.py  user.py  user_router.py
backend/app/schemas/: agenda_schema.py  task_schema.py  user.py
backend/app/services/: agenda_service.py  auth_service.py  file_service.py  notepad_service.py  task_service.py  user_service.py
frontend/: Dockerfile  agenda.html  app.js  files.html  how-it-works.html  index.html  login.html  nginx.conf  notepad.html  profile.html  register.html  style.css  tasks.html
frontend/css/: animations.css  components.css  howto.css  layout.css
frontend/css/modules/: agenda.css  files.css  notepad.css  tasks.css
frontend/js/: animations.js  api.js  auth.js  toast.js  validations.js
frontend/js/modules/: agenda.js  files.js  notepad.js  profile.js  tasks.js  validations.js
volumes/pgadmin/: pgadmin4.db
volumes/pgadmin/sessions/: 6aacd360-aa05-4da9-a114-0c75e2e6aa23  acfc929d-726c-43d6-9501-c75f5bc05c60  d3c1ca50-841a-46ca-8021-f1c818347947
